# latest-kings-cab

./: .gitattributes  BUILD_COMMANDS.md  CMakeLists.txt  CUSTOM_BACKGROUND_GUIDE.md  README.md  SESSION_NOTES.md  WINDOWS_BUILD_SOLUTION.md  build_and_run.sh  build_windows.bat  run.sh
.github/workflows/: build-macos.yml  build-windows-automated.yml  build-windows-simple.yml  build-windows.yml
Multi-Blend-Enhanced/: .gitignore  CMakeLists.txt  GITHUB_UPLOAD_COMPLETE.md  LOGIC_PRO_READY.md  README.md
Multi-Blend-Enhanced/.github/workflows/: build.yml
Multi-Blend-Enhanced/release/: BUILD_GUIDE.md  CMakeLists.txt  TEST_REPORT.md  run_tests.sh
Multi-Blend-Enhanced/release/src/: ClipperLimiter.cpp  ClipperLimiter.h
Multi-Blend-Enhanced/release/test/: CMakeLists.txt  PluginTestSuite.h
Multi-Blend-Enhanced/src/: ClipperLimiter.cpp  ClipperLimiter.h  LookAndFeel.cpp  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Multi-Blend-Enhanced/test/: PluginTestSuite.cpp  TestRunner.cpp
build_real_windows/: Makefile  cmake_install.cmake  juce_vst3_helper
build_real_windows/TheKingsCab_artefacts/Release/Standalone/The King's Cab.app/Contents/: Info.plist
build_windows/: Makefile  cmake_install.cmake  windows-toolchain.cmake
installers/: BUILD_WINDOWS_GUIDE.md  DISTRIBUTION_GUIDE.md  README.md  TheKingsCab-Setup.iss  build_all_installers.sh  build_windows_installer.bat  create_mac_installer.sh  create_mac_installer_intel.sh  create_windows_exe.py  create_windows_exe_installer.py  create_windows_installer.nsi
installers/mac/: distribution.xml
installers/mac-intel/: distribution.xml
installers/mac-intel/resources/: postinstall  readme.txt
installers/mac/resources/: postinstall  preinstall  welcome.txt
installers/windows/: INSTALL-TheKingsCab.bat  INSTALL.bat  PLUGINS_NEEDED.txt  README-INSTALLER.txt  README-WINDOWS.txt  TheKingsCab-Windows-Installer.ps1
installers/windows/plugins/AAX/: TheKingsCab.aaxplugin
installers/windows/plugins/VST3/The King's Cab.vst3/Contents/: Info.plist  moduleinfo.json
installers/windows/plugins/VST3/The King's Cab.vst3/Contents/x86_64-win/: The King''s Cab.vst3  TheKingsCab.vst3
installers/windows/plugins/VST3/TheKingsCab.vst3/Contents/Resources/: moduleinfo.json
installers/windows/plugins/VST3/TheKingsCab.vst3/Contents/x86_64-win/: TheKingsCab.vst3
mac/resources/: postinstall  preinstall  readme.txt  welcome.txt
scripts/: build.sh  install_mac.sh
src/: LookAndFeel.cpp  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/Components/: IRSlot.cpp  IRSlot.h
src/DSP/: ConvolutionEngine.cpp  ConvolutionEngine.h  GainProcessor.cpp  GainProcessor.h  IRManager.cpp  IRManager.h  PitchShifter.h  ReverbEngine.h  ShimmerReverb.cpp  ShimmerReverb.h
